# Retrievalbench

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RetrievalBench_Design.md  RetrievalBench_Roadmap.md  docker-compose.yaml  main.py  pyproject.toml
configs/: baseline.yaml  hybrid_reranked.yaml  recursive_800.yaml
src/retrievalbench/: cli.py  config.py  generate.py  golden.py  model.py  runner.py  scratch.py  storage.py
src/retrievalbench/eval/: __init__.py  metric.py
src/retrievalbench/ingest/: chunkers.py  index.py  loader.py
src/retrievalbench/retrieval/: embedders.py  rerankers.py  retrieval.py  store.py
