[project]
name = "retrievalbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=4.0.7",
    "hatchling>=1.30.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "tiktoken>=0.13.0",
    "typer>=0.26.8",
]

[project.scripts]
rbench = "retrievalbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrievalbench"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.lint.per-file-ignores]
# golden.py is a hand-written dataset of natural-language queries and answers.
# E501 (line-too-long) is a code-readability rule; reflowing these strings would
# add noise and, for the multi-line expected_answer blocks, change the data.
"src/retrievalbench/golden.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
